--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "banco-lalito",
-  "version": "1.0.0",
-  "description": "",
-  "main": ".eslintrc.js",
+  "version": "2.0.0",
+  "description": "Operational dashboard for manual process execution in a bank",
+  "main": "server.js",
   "directories": {
     "doc": "docs",
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "bank",
+    "dashboard",
+    "manual",
+    "process",
+    "execution",
+    "operational"
+  ],
+  "author": "ygmrtm",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "eslint": "^9.11.1",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "husky": "^9.1.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -26,6 +38,7 @@
   "devDependencies": {
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
