--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "ygmrtm",
   "license": "ISC",
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "dotenv": "^16.4.5",
     "eslint": "^9.11.1",
     "express": "^4.21.0",
