--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
     "eslint": "^9.11.1",
     "express": "^4.21.0",
@@ -32,6 +33,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.3.3",
+    "sendgrid": "^5.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.2"
