--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "husky": "^9.1.6",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.3.3",
     "sendgrid": "^5.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^5.2.1",
