--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banco-lalito",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Operational dashboard for manual process execution in a bank",
   "main": "server.js",
   "directories": {
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "release": "standard-version"
   },
   "keywords": [
     "bank",
@@ -23,14 +24,12 @@
   "author": "ygmrtm",
   "license": "ISC",
   "dependencies": {
-    "@doist/todoist-api-typescript": "^3.0.3",
     "@notionhq/client": "^2.2.15",
     "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
     "eslint": "^9.11.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "husky": "^9.1.6",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -43,8 +42,15 @@
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "standard-version": "^9.5.0",
     "supertest": "^7.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint ."
+    }
   }
 }
