--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "release": "standard-version"
+    "release": "standard-version",
+    "release-and-publish": "npm run release && git push --follow-tags origin main && npm publish"
   },
   "keywords": [
     "bank",
