--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "release": "standard-version",
-    "release-and-publish": "npm run release && git push --follow-tags origin main && npm publish"
+    "release-and-push": "npm run release && git push --follow-tags origin release"
   },
   "keywords": [
     "bank",
@@ -51,7 +51,9 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint ."
+      "pre-commit": "npm test",
+      "pre-push": "npm run release",
+      "push": "git push --follow-tags origin release"
     }
   }
 }
