--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npm test --passWithNoTests
 
       # Authenticate with npm registry
       - name: Authenticate to npm
