--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "nodemon server.js",
     "test": "jest --passWithNoTests",
     "release": "standard-version",
-    "release-and-push": "npm run release && git push --follow-tags origin release"
+    "release-and-push": "npm run release && git push --follow-tags origin release",
+    "prepare": "husky"
   },
   "keywords": [
     "bank",
@@ -48,12 +49,5 @@
     "nodemon": "^3.1.7",
     "standard-version": "^9.5.0",
     "supertest": "^7.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm run release",
-      "push": "git push --follow-tags origin release"
-    }
   }
 }
