--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest --passWithNoTests",
-    "release": "standard-version",
-    "release-and-push": "npm run release && git push --follow-tags origin release",
-    "prepare": "husky"
+    "test": "jest --passWithNoTests"
   },
   "keywords": [
     "bank",
