--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banco-lalito",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Operational dashboard for manual process execution in a bank",
   "main": "server.js",
   "directories": {
@@ -10,7 +10,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "release": "standard-version",
+    "release-and-push": "npm run release && git push --follow-tags origin release",
+    "prepare": "husky"
   },
   "keywords": [
     "bank",
