--- a/.versionrc
+++ b/.versionrc
@@ -2,13 +2,13 @@
   "types": [
     {"type": "feat", "section": "Features"},
     {"type": "fix", "section": "Bug Fixes"},
-    {"type": "chore", "hidden": true},
+    {"type": "chore", "section": "Chore"},
     {"type": "docs", "hidden": true},
     {"type": "style", "hidden": true},
     {"type": "refactor", "hidden": true},
     {"type": "perf", "hidden": true},
     {"type": "test", "hidden": true}
   ],
-  "commitUrlFormat": "https://github.com/your-username/banco-lalito/commit/{{hash}}",
-  "compareUrlFormat": "https://github.com/your-username/banco-lalito/compare/{{previousTag}}...{{currentTag}}"
+  "commitUrlFormat": "https://github.com/ygmrtm/banco-lalito/commit/{{hash}}",
+  "compareUrlFormat": "https://github.com/ygmrtm/banco-lalito/compare/{{previousTag}}...{{currentTag}}"
 }
