--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --passWithNoTests",
-    "release": "standard-version",
+    "release": "standard-version --verbose --config ./.versionrc",
+    "release-dry-run": "standard-version --dry-run --verbose",
     "prepare": "husky"
   },
   "keywords": [
