--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9.11.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "mailersend": "^2.6.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
