--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^3.3.3",
+    "redis": "^5.1.0",
     "sendgrid": "^5.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
