--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
 permissions:
+  id-token: write  # Required for OIDC
   contents: write
   
 jobs:
@@ -48,12 +49,6 @@ jobs:
       - name: Push to GitHub
         run: git push --follow-tags origin main
 
-      # Authenticate with npm registry
-      - name: Authenticate to npm
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-
       # Publish the package
       - name: Publish package to npm
         run: npm publish --access public --tag latest
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
