--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -26,7 +26,9 @@ jobs:
 
       # Install dependencies and run tests
       - name: Install dependencies
-        run: npm install
+        run: npm install ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_READ_TOKEN }}        
 
       - name: Run tests
         run: npm test --passWithNoTests
