--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,14 +19,14 @@ jobs:
 
       # Set up Node.js environment
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'  # Use your Node.js version
+          node-version: '16'  
           registry-url: 'https://registry.npmjs.org/'
 
       # Install dependencies and run tests
       - name: Install dependencies
-        run: npm install ci
+        run: npm install
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_READ_TOKEN }}        
 
