--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 permissions:
-  id-token: write  # Required for OIDC
+  id-token: write 
   contents: write
   
 jobs:
@@ -25,13 +25,19 @@ jobs:
           registry-url: 'https://registry.npmjs.org/'
 
       # Install dependencies and run tests
-      - name: Install dependencies
+      - name: NPM | Install dependencies
         run: npm install
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_READ_TOKEN }}        
-
-      - name: Run tests
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_READ_TOKEN }} 
+        
+      - name: NPM | Build
+        run: npm run build --if-present
+      - name: NPM | Run tests
         run: npm test --passWithNoTests
+      - name: NPM | Release
+        run: npm run release
+      - name: NPM | Publish package to npm
+        run: npm publish          
 
       # GIT login
       - name: GIT login
@@ -39,11 +45,7 @@ jobs:
           git config --global user.name 'ygmrtm'
           git config --global user.email 'ygmrtm@gmail.com'
           git remote set-url origin https://${{ secrets.PAT_GH }}@github.com/ygmrtm/banco-lalito.git
-
-      # Release   
-      - name: Release
-        run: npm run release
-
+          
       # GIT commit(force and add tag) & push
       - name: Commit 
         run: 'git commit --allow-empty -m "chore: (release): publish ${{ steps.Release.outputs.newTag }}"'
@@ -52,5 +54,5 @@ jobs:
         run: git push --follow-tags origin main
 
       # Publish the package
-      - name: Publish package to npm
-        run: npm publish --tag latest
+      #- name: Publish package to npm
+      #  run: npm publish --tag latest
