--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -47,7 +47,7 @@ jobs:
          
       # GIT commit(force and add tag) & push
       - name: GIT | Commit 
-        run: 'git commit --allow-empty -m "chore: (release): publish ${{ steps.Release.outputs.newTag }}"'
+        run: 'git commit --allow-empty -m "chore: (release): published ${{ steps.Release.outputs.newTag }}"'
 
       - name: GIT | Push to GitHub
         run: git push --follow-tags origin main
