--- a/.github/workflows/Manual_Publish_NPM.yml
+++ b/.github/workflows/Manual_Publish_NPM.yml
@@ -47,12 +47,13 @@ jobs:
           git config --global user.name 'ygmrtm'
           git config --global user.email 'ygmrtm@gmail.com'
           git remote set-url origin https://${{ secrets.PAT_GH }}@github.com/ygmrtm/banco-lalito.git
-          
       # Ensure npm 11.5.1 or later is installed
       - name: Update npm
         run: npm install -g npm@latest
       - run: npm ci
       - run: npm run build --if-present
+      - name: Release
+        run: npm run release          
       - run: npm test
       - run: npm publish
 
