--- a/.github/workflows/Manual_Publish_NPM.yml
+++ b/.github/workflows/Manual_Publish_NPM.yml
@@ -3,7 +3,7 @@
 name: Manual Publish NPM
 permissions:
   id-token: write  # Required for OIDC
-  contents: read
+  contents: write
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
